src/objects/RoutingMember__c.object
<CustomObject>
    <customHelpPage>INC_HelpRedirect</customHelpPage>
    <description>&quot;...how we would want to be able to program DTW administrator assignments based on certain attributes of the organization string of a project&quot;</description>
    <fields>
        <fullName>A1Alert__c</fullName>
        <formula>IF(App1Status__c = &quot;Inactive&quot;,
IMAGE(&quot;/resource/1435520899000/StopSignImage&quot;,&quot;Alert&quot;, 20,20),

NULL)</formula>
        <label>A1 Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A2Alert__c</fullName>
        <formula>IF(App2Status__c = &quot;Inactive&quot;,
IMAGE(&quot;/resource/1435520899000/StopSignImage&quot;,&quot;Alert&quot;, 20,20),

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A2 Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A3Alert__c</fullName>
        <formula>IF(App3Status__c = &quot;Inactive&quot;,
IMAGE(&quot;/resource/1435520899000/StopSignImage&quot;,&quot;Alert&quot;, 20,20),

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A3 Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App1Status__c</fullName>
        <formula>IF (
    ISBLANK(Approver1__c), &quot;&quot;,
    IF (Approver1__r.IsActive, &quot;Active&quot;, &quot;Inactive&quot;)        
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App1Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App2Status__c</fullName>
        <formula>IF (
    ISBLANK(Approver2__c), &quot;&quot;,
    IF (Approver2__r.IsActive, &quot;Active&quot;, &quot;Inactive&quot;)        
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App2Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App3Status__c</fullName>
        <formula>IF (
    ISBLANK(Approver3__c), &quot;&quot;,
    IF (Approver3__r.IsActive, &quot;Active&quot;, &quot;Inactive&quot;)        
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App3Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RoutingMembers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RoutingMembers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RoutingMembers3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessLineDescription__c</fullName>
        <label>Business Line</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTWAdmin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renamed Label from DTW Admin to User Name</description>
        <inlineHelpText>Renamed Label from DTW Admin to User Name</inlineHelpText>
        <label>DTW Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RoutingMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTW_Approver_Group__c</fullName>
        <label>DTW Approver Group</label>
        <picklist>
            <picklistValues>
                <fullName>DTW Africa Approvers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTW ANZ Approvers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTW Continental Europe Approvers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTW Greater China Approvers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTW India Approvers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTW Middle East Approvers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTW Midwest Approvers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTW Northeast Approvers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTW Pacific Approvers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTW Southeast Approvers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTW Southeast Asia Approvers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTW UK &amp; Ireland Approvers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTW West/Gulf Coast Approvers</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DistrictDescription__c</fullName>
        <label>District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinanceManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RoutingMembers4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeographyDescription__c</fullName>
        <label>Geography</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GlobalDefaultUnique__c</fullName>
        <label>Global Default Unique</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GlobalDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This marks one record as the global default for DTW Admin in case of invalid data.</description>
        <label>Global Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegalEntityDescription__c</fullName>
        <label>Legal Entity</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionDescription__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoutingMemberTextUnique__c</fullName>
        <description>Used as a unique value, populated by WFR</description>
        <label>RoutingMemberTextUnique</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SuperGeography__c</fullName>
        <label>Super Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worldwide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniqueRoutingMemberFormula__c</fullName>
        <description>Concatenation of key attributes of the routing member (Geography Name, Region, District, Business Line Name and Legal Entity) to ensure uniqueness</description>
        <formula>GeographyDescription__c&amp;RegionDescription__c&amp;DistrictDescription__c&amp;BusinessLineDescription__c&amp;LegalEntityDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Routing Member Formula</label>
        <type>Text</type>
    </fields>
    <label>Routing Member</label>
    <listViews>
        <fullName>All_Approver_Rules</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>DTWAdmin__c</columns>
        <columns>GeographyDescription__c</columns>
        <columns>RegionDescription__c</columns>
        <columns>DTW_Approver_Group__c</columns>
        <columns>DistrictDescription__c</columns>
        <columns>BusinessLineDescription__c</columns>
        <columns>LegalEntityDescription__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RoutingMember__c.DTWApprovers</value>
        </filters>
        <filters>
            <field>DTW_Approver_Group__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Approver Rules</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_DTW_Admin_and_Approver_Rules</fullName>
        <columns>SuperGeography__c</columns>
        <columns>NAME</columns>
        <columns>DTW_Approver_Group__c</columns>
        <columns>GeographyDescription__c</columns>
        <columns>RegionDescription__c</columns>
        <columns>DistrictDescription__c</columns>
        <columns>BusinessLineDescription__c</columns>
        <columns>LegalEntityDescription__c</columns>
        <columns>DTWAdmin__c</columns>
        <columns>Approver1__c</columns>
        <columns>Approver2__c</columns>
        <columns>Approver3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All DTW Admin and Approver Rules</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_DTW_Admin_and_Approver_Rules_ANZ</fullName>
        <columns>SuperGeography__c</columns>
        <columns>NAME</columns>
        <columns>DTW_Approver_Group__c</columns>
        <columns>GeographyDescription__c</columns>
        <columns>RegionDescription__c</columns>
        <columns>DistrictDescription__c</columns>
        <columns>BusinessLineDescription__c</columns>
        <columns>LegalEntityDescription__c</columns>
        <columns>DTWAdmin__c</columns>
        <columns>Approver1__c</columns>
        <columns>Approver2__c</columns>
        <columns>Approver3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GeographyDescription__c</field>
            <operation>equals</operation>
            <value>ANZ</value>
        </filters>
        <label>All DTW Admin and Approver Rules - ANZ</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DTW_Admin_ANZ_RoutingMember</fullName>
        <filterScope>Queue</filterScope>
        <label>DTW Admin - ANZ</label>
        <queue>DTW_Admin_ANZ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DTW_Admin_APAC_RoutingMember</fullName>
        <filterScope>Queue</filterScope>
        <label>DTW Admin - APAC</label>
        <queue>DTW_Admin_APAC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DTW_Admin_Africa_RoutingMember</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>DTWAdmin__c</columns>
        <columns>Approver1__c</columns>
        <columns>Approver2__c</columns>
        <columns>Approver3__c</columns>
        <columns>GlobalDefault__c</columns>
        <columns>Description__c</columns>
        <filterScope>Queue</filterScope>
        <label>DTW Admin - Africa</label>
        <language>en_US</language>
        <queue>DTW_Admin_Africa</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DTW_Admin_Americas_RoutingMember</fullName>
        <columns>NAME</columns>
        <columns>SuperGeography__c</columns>
        <columns>GeographyDescription__c</columns>
        <columns>RegionDescription__c</columns>
        <columns>Area__c</columns>
        <columns>DistrictDescription__c</columns>
        <columns>BusinessLineDescription__c</columns>
        <columns>Approver1__c</columns>
        <columns>Approver2__c</columns>
        <columns>Approver3__c</columns>
        <columns>DTWAdmin__c</columns>
        <filterScope>Queue</filterScope>
        <label>DTW Admin - Americas</label>
        <language>en_US</language>
        <queue>DTW_Admin_Americas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DTW_Admin_Asia_RoutingMember</fullName>
        <filterScope>Queue</filterScope>
        <label>DTW Admin - Asia</label>
        <queue>DTW_Admin_Asia</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DTW_Admin_BC_RoutingMember</fullName>
        <filterScope>Queue</filterScope>
        <label>DTW Admin - BC</label>
        <queue>DTW_Admin_BC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DTW_Admin_EIC_RoutingMember</fullName>
        <filterScope>Queue</filterScope>
        <label>DTW Admin - EIC</label>
        <queue>DTW_Admin_EIC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DTW_Admin_EMEA_RoutingMember</fullName>
        <filterScope>Queue</filterScope>
        <label>DTW Admin - EMEA</label>
        <queue>DTW_Admin_EMEA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DTW_Admin_Middle_East_RoutingMember</fullName>
        <filterScope>Queue</filterScope>
        <label>DTW Admin - Middle East</label>
        <queue>DTW_Admin_Middle_East</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DTW_Admin_RoutingMember</fullName>
        <filterScope>Queue</filterScope>
        <label>DTW Admin - EMEAI</label>
        <queue>DTW_Admin_EMEAI</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DTW_Corp_Admin_RoutingMember</fullName>
        <filterScope>Queue</filterScope>
        <label>DTW Corp Admin</label>
        <queue>DTW_Corp_Admin</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DTW_Inactive_Approvers</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>Approver1__c</columns>
        <columns>A1Alert__c</columns>
        <columns>Approver2__c</columns>
        <columns>A2Alert__c</columns>
        <columns>Approver3__c</columns>
        <columns>A3Alert__c</columns>
        <columns>NAME</columns>
        <columns>DTW_Approver_Group__c</columns>
        <columns>GeographyDescription__c</columns>
        <columns>RegionDescription__c</columns>
        <columns>DistrictDescription__c</columns>
        <columns>BusinessLineDescription__c</columns>
        <columns>LegalEntityDescription__c</columns>
        <columns>DTWAdmin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>App1Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <filters>
            <field>App2Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <filters>
            <field>App3Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>DTW Inactive Approvers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RM-{00000}</displayFormat>
        <label>RoutingMember</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RoutingMembers</pluralLabel>
    <recordTypes>
        <fullName>Active_Rule</fullName>
        <active>true</active>
        <label>Active Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approver1</fullName>
        <active>true</active>
        <label>Approver 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approver2</fullName>
        <active>true</active>
        <label>Approver 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approver3</fullName>
        <active>true</active>
        <label>Approver 3</label>
    </recordTypes>
    <recordTypes>
        <fullName>DTWApprovers</fullName>
        <active>true</active>
        <description>DTW Admins and Approvers</description>
        <label>DTW Approvers</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inactive_Rule</fullName>
        <active>true</active>
        <label>Inactive Rule</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>